--- a/5-blurry-loading/style.css
+++ b/5-blurry-loading/style.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu');
+
 *{
   box-sizing: border-box;
-  /* padding:0; */
+  padding:0;
+  margin: 0;
 }
 
 body{
@@ -11,7 +13,6 @@ body{
   align-items: center;
   height: 100vh;
   overflow: hidden;
-  margin: 0;
 }
 
 .bg{
